--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
 
     <ul id="files-list">
-        <li><span class="msg">No files yet!</span></li>
+        <li class="msg">No files yet!</li>
     </ul>
 
 </div>
